--- a/Dockerfile.runtime
+++ b/Dockerfile.runtime
@@ -3,7 +3,7 @@ FROM alpine:3.9
 WORKDIR /root/
 
 RUN apk add --force-refresh curl ca-certificates && \
-    curl -SLO  https://github.com/alexellis/inlets/releases/download/0.5.0-sync/inlets && \
+    curl -SLO  https://github.com/alexellis/inlets/releases/download/0.5.1/inlets && \
     chmod +x inlets && \
     apk del curl
 
