--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,11 @@ services:
 - docker
 script:
 - make docker
-- make docker-login
-- make push
 - make dist
+
+after_success:
+  - make docker-login
+  - make push
 
 deploy:
   provider: releases
