--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,12 @@ deploy:
     - ./bin/inlets-darwin
     - ./bin/inlets-armhf
     - ./bin/inlets-arm64
+    - ./bin/inlets.exe
     - ./bin/inlets.sha256
     - ./bin/inlets-darwin.sha256
     - ./bin/inlets-armhf.sha256
     - ./bin/inlets-arm64.sha256
+    - ./bin/inlets.exe.sha256
   skip_cleanup: true
   on:
     tags: true
