--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 language: go
 
 go:
-- "1.10"
+- "1.12"
 
 services:
 - docker
@@ -36,3 +36,6 @@ deploy:
   skip_cleanup: true
   on:
     tags: true
+
+env:
+  - GO111MODULE=off
