Update Docker version for builds
Signed-off-by: Alex Ellis (OpenFaaS Ltd) <alexellis2@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ script:
 - make docker
 - make dist
 
+addons:
+  apt:
+    packages:
+      - docker-ce
+
 after_success:
   - make docker-login
   - make push
