--- a/.DEREK.yml
+++ b/.DEREK.yml
@@ -8,6 +8,8 @@ features:
  - comments
  - pr_description_required
  - release_notes
+ - hacktoberfest
+ - no_newbies
 
 custom_messages:
   - name: slack
