--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,10 +7,13 @@ on:
   pull_request:
     branches:
       - "*"
-
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    strategy:
+        matrix:
+          go-version: [1.15.x]
+          os: [ubuntu-20.04]
+    runs-on: ${{ matrix.os }}
     steps:
       - 
         uses: actions/checkout@master
