--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,7 +14,7 @@ tasks:
       remote=$(gp url 8090)
       echo
       echo "Inlets server is running on $(gp url 8090)."
-      echo "$(tput setaf 7)You can tunnel to it using $(tput setaf 2)inlets client --remote=${remote/https/wss} --token $(cat /tmp/inlets-token) --upstream=http://127.0.0.1:3000$(tput sgr0)"
+      echo "$(tput setaf 7)You can tunnel to it using $(tput setaf 2)inlets client --url=${remote/https/wss} --token $(cat /tmp/inlets-token) --upstream=http://127.0.0.1:3000$(tput sgr0)"
       echo
       echo "Once you have an inlet client connected, head over to $(tput setaf 4)$(gp url 8090)$(tput sgr0) to access that service."
     openMode: split-right
