--- a/hack/inlets-pro.service
+++ b/hack/inlets-pro.service
@@ -8,7 +8,7 @@ Restart=always
 RestartSec=2
 StartLimitInterval=0
 EnvironmentFile=/etc/default/inlets-pro
-ExecStart=/usr/local/bin/inlets-pro server --auto-tls --common-name="${IP}"  --remote-tcp="${REMOTETCP}" --token="${AUTHTOKEN}"
+ExecStart=/usr/local/bin/inlets-pro server --auto-tls --common-name="${IP}"  --upstream="${REMOTETCP}" --token="${AUTHTOKEN}"
 
 [Install]
 WantedBy=multi-user.target
