Remove last traces of Docker Hub
GHCR is now where inlets is hosted.

Signed-off-by: Alex Ellis (OpenFaaS Ltd) <alexellis2@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,4 +41,4 @@ jobs:
             VERSION=latest-dev
             GIT_COMMIT=${{ github.sha }}
             REPO_URL=https://github.com/${{ env.USER_REPO }}
-          tags: inlets/inlets:${{ github.sha }}
+          tags: ghcr.io/inlets/inlets:${{ github.sha }}
