--- a/.DEREK.yml
+++ b/.DEREK.yml
@@ -8,7 +8,7 @@ features:
  - comments
  - pr_description_required
  - release_notes
- - hacktoberfest
+# - hacktoberfest
 
 custom_messages:
   - name: slack
